<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <artifactId>parent</artifactId>
        <groupId>org.hampelratte</groupId>
        <version>9</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>svdrp4j</artifactId>
    <packaging>bundle</packaging>
    <version>2.0.0-SNAPSHOT</version>
    <name>Simple Video Disk Recorder Protocol</name>
    <description>An implementation of the Simple VDR Protocol.</description>
    <url>https://github.com/hampelratte/svdrp4j</url>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>2.0.17</version>
            <type>jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.20.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/hampelratte/svdrp4j/issues</url>
    </issueManagement>
    <ciManagement>
        <system>Jenkins CI</system>
        <url>https://hampelratte.org/ci/job/svdrp4j</url>
    </ciManagement>
    <scm>
        <connection>scm:git:git://github.com/hampelratte/svd1rp4j.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:hampelratte/svdrp4j.git</developerConnection>
        <url>https://github.com/hampelratte/svdrp4j</url>
    </scm>
    <organization>
        <name>hampelratte.org</name>
        <url>https://www.hampelratte.org</url>
    </organization>
    <build>
        <resources>
            <resource>
                <directory>${basedir}</directory>
                <includes>
                    <include>LICENSE.txt</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <quiet>true</quiet>
                </configuration>
                <executions>
                    <execution>
                        <id>javadoc-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>6.0.0</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                        <Bundle-Vendor>${project.organization.name}</Bundle-Vendor>
                        <Import-Package>!javax.swing.*,*</Import-Package>
                        <_nouses>true</_nouses>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>hampelratte-releases</id>
            <name>hampelratte.org releases</name>
            <url>https://www.hampelratte.org/maven/releases</url>
        </repository>
        <repository>
            <id>hampelratte-snapshots</id>
            <name>hampelratte.org snapshots</name>
            <url>https://www.hampelratte.org/maven/snapshots</url>
        </repository>
    </repositories>
</project>
